Fix HTML formatting and update asset paths

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
   <div class="header-container">
     <div class="profile-photo">
-      <img src="/assets/profile.jpg" alt="Vishva Profile">
+      <img src="assets/profile.jpg" alt="Vishva Profile">
     </div>
     <div class="header-text">
       <h1>👋 Hi, I'm Vishva</h1>
@@ -21,10 +21,10 @@
       <p>Full Stack Developer | AI & Automation Enthusiast</p>
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/vishva-n-122154378" target="_blank">
-          <img src="\assets\linkedin.png" alt="LinkedIn" class="icon">
+          <img src="assets\linkedin.png" alt="LinkedIn" class="icon">
         </a>
         <a href="https://github.com/vishvanalarajan" target="_blank">
-          <img src="\assets\github.png" alt="GitHub" class="icon">
+          <img src="assets\github.png" alt="GitHub" class="icon">
         </a>
       </div>
       <nav>
@@ -80,4 +80,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
