--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <img src="assets\linkedin.png" alt="LinkedIn" class="icon">
         </a>
         <a href="https://github.com/vishvanalarajan" target="_blank">
-          <img src="assets\github.png" alt="GitHub" class="icon">
+          <img src="assets/github.png" alt="GitHub" class="icon">
         </a>
       </div>
       <nav>
@@ -80,5 +80,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
