Fix HTML formatting and remove unnecessary characters

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p>Full Stack Developer | AI & Automation Enthusiast</p>
       <div class="social-icons">
         <a href="https://www.linkedin.com/in/vishva-n-122154378" target="_blank">
-          <img src="assets\linkedin.png" alt="LinkedIn" class="icon">
+          <img src="assets/linkedin.png" alt="LinkedIn" class="icon">
         </a>
         <a href="https://github.com/vishvanalarajan" target="_blank">
           <img src="assets/github.png" alt="GitHub" class="icon">
@@ -80,6 +80,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
